--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ pylint==2.6.0
 PyMySQL==1.0.2
 python-dateutil==2.8.1
 pytz==2021.1
+pywin32==300
 pyzmq==22.0.2
 six==1.15.0
 soupsieve==2.2.1
@@ -48,4 +49,5 @@ traitlets==5.0.5
 virtualenv==20.4.2
 wcwidth==0.2.5
 Werkzeug==1.0.1
+whitenoise==5.3.0
 wrapt==1.12.1
